# paaaaath

./: .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini
.github/: ci.yml
.github/workflows/: bump.yml  ci.yml  codeql-analysis.yml  publish.yml  release-drafter.yml  release.yml
assets/: python_logo.txt
examples/: gcs.py  print_rfc2324.py  s3.py  use_custom_client.py
paaaaath/: __init__.py  basic.py  blob.py  common.py  gcs.py  http.py  posix.py  s3.py  uri.py  windows.py
scripts/: setup.sh
tests/: conftest.py  test_blob.py  test_common.py  test_gcs.py  test_http.py  test_http_path.py  test_path_common.py  test_s3.py  test_uri.py  test_uri_path.py
