[tool.poetry]
name = "paaaaath"
version = "0.2.0"
description = "a useful alternative Path object"
authors = ["Masahiro Wada <argon.argon.argon@gmail.com>"]
license = "MIT"
repository = "https://github.com/ar90n/paaaaath"
readme = "README.md"
keywords = ["path", "s3", "gcs", "cloud"]


[tool.poetry.dependencies]
python = "^3.8"
smart-open = {extras = ["http", "s3", "gcs"], version = "^4.1.2"}
lambdas = "^0.1.0"
google-cloud-storage = "^1.36.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
pytest-xdist = "^2.2.1"
pre-commit = "^2.10.1"
pytest-black = "^0.3.12"
pytest-mypy = "^0.8.0"
wemake-python-styleguide = "^0.15.1"
black = {version = "^20.8b1", allow-prereleases = true}
pytest-httpserver = "^0.3.8"
isort = "^5.7.0"
moto = {extras = ["s3"], version = "^1.3.16"}
bandit = "^1.7.0"
wait-for-it = "^2.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
